# aytch

./: .bumpversion.cfg  .coveragerc  .gitignore  LICENSE  Makefile  README.md  coverage.xml  pyproject.toml  pytest.ini
.github/hack/: changelog.sh
.github/workflows/: release.yaml  test.yaml
aytch/: __init__.py  helper.py  main.py  utils.py
tests/: test_channel_info.py  test_helper.py  test_utils.py
