[tool.poetry]
name = "aytch"
version = "0.1.1"
description = "Async YouTube Channels Info"
authors = ["Kiel Ed <kieledssh@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["scrapper", "parser", "info", "aiohttp", "channels", "asyncio", "yt", "youtube", "async"]
homepage = "https://github.com/kieled/aytch"
repository = "https://github.com/kieled/aytch"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]

packages = [
    { include = "aytch" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.4"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

